add custom responses

--- a/app/views/errors/404.ejs
+++ b/app/views/errors/404.ejs
@@ -1,3 +1,15 @@
-<h1><%= message %></h1>
-<h2><%= error.status %></h2>
-<pre><%= error.stack %></pre>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <title>Page Not Found</title>
+</head>
+<body>
+<pre>
+    <h3><%= message %></h3>
+    <h4><%= status %></h4>
+</pre>
+</body>
+</html>
+
+
