--- a/app/views/errors/400.ejs
+++ b/app/views/errors/400.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Internal Server Error</title>
+    <title>Bad Request</title>
 </head>
 <body>
 <pre>
