--- a/app/views/hello.ejs
+++ b/app/views/hello.ejs
@@ -1,7 +1,15 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Express MVC</title>
+    <link rel="icon" type="image/png" href="<%= _url('favicon.png') %>"/>
+    <link href="<%= _url('css/style.css') %>" type="text/css" rel="stylesheet" />
+</head>
+<body>
+
 <h1>
     Hello world <%= _lang("name") %>!
 </h1>
 
-<a href="/profile">Profile</a>
-<br/>
-<a href="/logout">logout</a>
+</body>
+</html>
